test/good/arrays/empty06.px

func f(a: [Int], b: [[Bool]], c: [[[Char]]] = [[[]]]): Int*Int*Int def
    return a.length, b.length, c[0][0].length

print f([], b = [[]])
