test/bad/functions/call02.px

func f(x: Int): Bool def
    return x > 0

f(f(5))
